--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ body , html{
     padding: 10px 10px;
     background-color: #020b10;
     border-radius: 10px;
-    border-color: #f1f5f7;
+    border-color: aqua;
     text-shadow: 0 0 20px currentColor;
     box-shadow: 0 0 20px currentColor;
 }
