--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@ body , html{
     cursor: pointer;
     color: white;
     padding: 10px 10px;
-    background-color: #020b10;
+    background-color:transparent;
     border-radius: 10px;
     border-color: aqua;
     text-shadow: 0 0 20px currentColor;
