--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ body , html{
     margin: 0;
     padding: 0; 
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 .top{
@@ -14,7 +15,17 @@ body , html{
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    animation: backgroundAnimation 20s linear infinite;
 }
+
+@keyframes backgroundAnimation {
+    0% {
+      background-position: 0% 0%;
+    }
+    100% {
+      background-position: 100% 100%;
+    }
+  }
 
 .top button{
     position: absolute;
@@ -227,12 +238,6 @@ nav.fill ul li a:hover:after {
     padding-left: 30px;
 }
 
-/* .intro-grid img:hover{
-    transform: scale(1.1);
-    transition: 1s;
-    cursor: pointer;
-} */
-
 .google-maps{
     height: 400px;
     width: 100%;
@@ -315,6 +320,7 @@ nav.fill ul li a:hover:after {
     display: flex;
     justify-content: center;
     align-items: center;
+    animation: backgroundAnimation 20s linear infinite;
 }
 
 .container {
