--- a/index.css
+++ b/index.css
@@ -436,6 +436,10 @@ input[type="submit"]:hover {
         font-size: small;
     }
 
+    .intro img{
+        padding-left: 0px;
+    }
+    
     .book-button{
         font-size: 10px;
     }
